--- a/week9-10/02_quest/03_CRUD/todo-app/config/database.yml
+++ b/week9-10/02_quest/03_CRUD/todo-app/config/database.yml
@@ -14,16 +14,16 @@
 # Configure Using Gemfile
 # gem "pg"
 #
-default: &default
-  adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+# default: &default
+#   adapter: postgresql
+#   encoding: unicode
+#   # For details on connection pooling, see Rails configuration guide
+#   # https://guides.rubyonrails.org/configuring.html#database-pooling
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-development:
-  <<: *default
-  database: todo_app_development
+# development:
+#   <<: *default
+#   database: todo_app_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -55,9 +55,9 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: todo_app_test
+# test:
+#   <<: *default
+#   database: todo_app_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -79,8 +79,25 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
+# production:
+#   <<: *default
+#   database: todo_app_production
+#   username: todo_app
+#   password: <%= ENV["TODO_APP_DATABASE_PASSWORD"] %>
+
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  host: db
+  username: <%= ENV['POSTGRES_USERNAME'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  pool: 5
+
+development:
   <<: *default
-  database: todo_app_production
-  username: todo_app
-  password: <%= ENV["TODO_APP_DATABASE_PASSWORD"] %>
+  database: todo_app_development
+
+
+test:
+  <<: *default
+  database: todo_app_test
