--- a/week9-10/02_quest/03_CRUD/todo-app/docker-compose.yml
+++ b/week9-10/02_quest/03_CRUD/todo-app/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   db:
     image: postgres
     environment:
+      POSTGRES_USERNAME: ${POSTGRES_USERNAME}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_HOST_AUTH_METHOD: ${POSTGRES_HOST_AUTH_METHOD}
   web:
