Add week9-10 04_ACTIVERECORD STEP5-2

--- a/week9-10/02_quest/04_ACTIVERECORD/template/docker-compose.yml
+++ b/week9-10/02_quest/04_ACTIVERECORD/template/docker-compose.yml
@@ -6,10 +6,12 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
   web:
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/todo-app2
     ports:
       - "3000:3000"
     depends_on:
       - db
+    tty: true
+    stdin_open: true
