--- a/week9-10/02_quest/03_CRUD/todo-app/docker-compose.yml
+++ b/week9-10/02_quest/03_CRUD/todo-app/docker-compose.yml
@@ -6,13 +6,12 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
   web:
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/todo-app
     ports:
       - "3000:3000"
     depends_on:
       - db
-    stdin_open: true
     tty: true
-
+    stdin_open: true
