Update week9-10 06_POSTMAN template

--- a/week9-10/02_quest/06_POSTMAN/template/config/database.yml
+++ b/week9-10/02_quest/06_POSTMAN/template/config/database.yml
@@ -8,9 +8,9 @@ default: &default
 
 development:
   <<: *default
-  database: todo_app_development
+  database: test_api_development
 
 
 test:
   <<: *default
-  database: todo_app_test
+  database: test_api_test
