--- a/week9-10/02_quest/04_ACTIVERECORD/template/Dockerfile-n
+++ b/week9-10/02_quest/04_ACTIVERECORD/template/Dockerfile-n
@@ -1,5 +1,5 @@
 FROM ruby:3.1.2
-RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs postgresql-client
+RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs
 RUN mkdir /todo-app2
 WORKDIR /todo-app2
 ADD Gemfile /todo-app2/Gemfile
