--- a/week9-10/02_quest/07_EASY_API/template/Dockerfile
+++ b/week9-10/02_quest/07_EASY_API/template/Dockerfile
@@ -1,8 +1,8 @@
 FROM ruby:3.1.2
-RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs
-RUN mkdir /easy-api
-WORKDIR /easy-api
-ADD Gemfile /easy-api/Gemfile
-ADD Gemfile.lock /easy-api/Gemfile.lock
+RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs postgresql-client
+RUN mkdir /test-api
+WORKDIR /test-api
+ADD Gemfile /test-api/Gemfile
+ADD Gemfile.lock /test-api/Gemfile.lock
 RUN bundle install
-ADD . /easy-api
+ADD . /test-api
